# SnCore

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pr-check.yml
cmake/: SnCoreConfig.cmake
core/: CMakeLists.txt
core/include/sncore/: api_common.h  defines.h  platform.h  types.h  utf.h  utils.h
core/src/: CMakeLists.txt  types.c
core/src/nix/: utf.c
core/src/win32/: utf.c
docs/: CMakeLists.txt  Doxyfile.in
include/sncore/: defines.h  types.h
template/: CMakeLists.txt
template/include/sntemplate/: api.h  defines.h  sntemplate.h
template/src/: CMakeLists.txt
test/: CMakeLists.txt  test.c
